--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <div class="container">
     <div class="row" id="image_content">
       <div class="card col-md-4"></div>
+
+      <!-- NOTE: EVERYTHING GOES IN HERE -->
       <div id="image_card" class="card col-md-4">
           <img id="image" data-id/>
           <h4 id="name"></h4>
