--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="row" id="image_content">
       <div class="card col-md-4"></div>
       <div id="image_card" class="card col-md-4">
-          <img id="image" data-id/>
+          <img id="image" data-id=31/>
           <h4 id="name"></h4>
           <span>Likes:
             <span id="likes">0</span>
@@ -27,7 +27,7 @@
           <button id="like_button">Like</button>
           <form id="comment_form">
             <input id="comment_input" type="text" name="comment" placeholder="Add Comment"/>
-            <input type="submit" value="Submit"/>
+            <input id="submit" type="submit" value="Submit"/>
           </form>
           <ul id="comments">
 
