--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button id="like_button">Like</button>
           <form id="comment_form">
             <input id="comment_input" type="text" name="comment" placeholder="Add Comment"/>
-            <input type="submit" value="Submit"/>
+            <input id="button" type="submit" value="Submit"/>
           </form>
           <ul id="comments">
 
@@ -39,5 +39,6 @@
   <script type="text/javascript" src='src/Image.js'></script>
   <script type="text/javascript" src='src/Comment.js'></script>
   <script type="text/javascript" src='src/index.js'></script>
+  <script type="text/javascript" src='src/adapter.js'></script>
   </body>
 </html>
