Finish Mod3 Test

--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
   <script type="text/javascript" src='src/Image.js'></script>
   <script type="text/javascript" src='src/Comment.js'></script>
   <script type="text/javascript" src='src/index.js'></script>
+  <script type="text/javascript" src='src/Adapter.js'></script>
+
   </body>
 </html>
